--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/router": "~9.1.1",
     "@types/js-base64": "^2.3.1",
     "bootstrap": "^4.4.1",
+    "faker": "^4.1.0",
     "js-base64": "^2.5.2",
+    "json-server": "^0.16.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
@@ -47,4 +49,5 @@
     "tslint": "~6.1.0",
     "typescript": "~3.8.3"
   }
+  
 }
