--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@angular/common": "~9.1.1",
     "@angular/compiler": "~9.1.1",
     "@angular/core": "~9.1.1",
+    "@angular/fire": "^6.0.0",
     "@angular/forms": "~9.1.1",
     "@angular/platform-browser": "~9.1.1",
     "@angular/platform-browser-dynamic": "~9.1.1",
@@ -22,6 +23,8 @@
     "@types/js-base64": "^2.3.1",
     "bootstrap": "^4.4.1",
     "faker": "^4.1.0",
+    "firebase": "^7.14.2",
+    "firebase-admin": "^8.11.0",
     "js-base64": "^2.5.2",
     "json-server": "^0.16.1",
     "ngx-cookie-service": "^3.0.4",
